# ChangeLog file for MonetDB
# This file is updated with Maddlog

* Thu Sep 14 2017 Sjoerd Mullender <sjoerd@acm.org>
- Removed the "align" field from the ATOM descriptor (atomDesc) structure.
- The atomtostr and atomfromstr "methods" for atoms now return ssize_t
  and require a pointer to size_t for the size of the buffer.
- The atom tostr and fromstr "methods" now always return -1 on error.
  A return value greater than 0 is normal, a return value of 0 is not
  normal, but technically not an error.
