@@ -15,7 +15,7 @@ ptr ATOMdup(int id, const void *val);
 bte ATOMelmshift(int sz);
 ssize_t ATOMformat(int id, const void *val, char **buf);
 int ATOMindex(const char *nme);
-int ATOMlen(int id, const void *v);
+size_t ATOMlen(int id, const void *v);
 str ATOMname(int id);
 ptr ATOMnil(int id);
 int ATOMprint(int id, const void *val, stream *fd);
@@ -481,7 +481,7 @@ ssize_t shtToStr(str *dst, size_t *len, const sht *src);
 const sht sht_nil;
 ssize_t strFromStr(const char *src, size_t *len, str *dst);
 BUN strHash(const char *s);
-int strLen(const char *s);
+size_t strLen(const char *s);
 int strNil(const char *s);
 const char str_nil[2];
 gdk_return void_inplace(BAT *b, oid id, const void *val, bit force) __attribute__((__warn_unused_result__));
@@ -828,7 +828,7 @@ ssize_t BLOBfromstr(const char *instr, size_t *l, blob **val);
 int BLOBget(Heap *h, int *bun, int *l, blob **val);
 BUN BLOBhash(const blob *b);
 void BLOBheap(Heap *heap, size_t capacity);
-int BLOBlength(const blob *p);
+size_t BLOBlength(const blob *p);
 str BLOBnitems(int *ret, blob *b);
 const blob *BLOBnull(void);
 str BLOBprelude(void *ret);
